--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ repositories {
 
 dependencies {
     compile 'com.drewnoakes:metadata-extractor:2.10.1'
+    compile group: 'com.googlecode.mp4parser', name: 'isoparser', version: '1.1.22'
 
     testCompile("org.junit.jupiter:junit-jupiter-api:5.0.0")
     testRuntime("org.junit.jupiter:junit-jupiter-engine:5.0.0")
