--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -1,11 +1,15 @@
-handlers= java.util.logging.ConsoleHandler
+handlers= java.util.logging.ConsoleHandler,java.util.logging.FileHandler
 
 .level= INFO
 
-java.util.logging.ConsoleHandler.level = ALL
+java.util.logging.ConsoleHandler.level = FINE
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 
 java.util.logging.SimpleFormatter.format= [%4$-6s] [%1$td-%1$tm-%1$ty %1$tH:%1$tM:%1$tS.%1$tL] %5$s %6$s %n
+
+java.util.logging.FileHandler.level = ALL
+java.util.logging.FileHandler.formatter = java.util.logging.SimpleFormatter
+
 
 # messages:
 com.tibodelor.tools.renamePictures.level = ALL
